<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ZenHabit</string>

    <!-- Valors DropdownMenu items (Categories) -->
    <string-array name="categories">
        <item>Aprenentatge</item>
        <item>Productivitat</item>
        <item>Salut</item>
    </string-array>

    <!-- BOTONS -->
    <string name="entrar">ENTRAR</string>
    <string name="cancel_lar">CANCEL·LAR</string>
    <string name="sortir">SORTIR</string>
    <string name="registrar_se">REGISTRAR-SE</string>
    <string name="desar">DESAR</string>
    <string name="btn_home_jardi">JARDÍ</string>
    <string name="btn_home_tasca_habit">HÀBITS / TASQUES</string>
    <string name="btn_tancar">Tancar</string>

    <!-- TITULARS -->
    <string name="hola">Hola!</string>
    <string name="benvingut_da">Benvingut/da!</string>
    <string name="titol_home_progres">Progrés</string>
    <string name="titol_jardi">Jardí</string>

    <!-- TEXTES -->
    <string name="categoria">Categoria</string>
    <string name="noInternet">No tens connexió a internet. Torna a provar.</string>
    <string name="label_home_pendents">Pendents</string>
    <string name="label_home_complerts">Hàbits complets</string>
    <string name="label_home_tasques_complertes">Tasques complertes</string>
    <string name="label_jardi_descripcio_item" tools:ignore="Typos">Més informació</string>
    <string name="label_jardi_items_obtinguts">Quantitat:</string>
    <string name="nom_canal">Notificacions ZenHabit</string>
    <string name="descripcio_canal">Notificacions de l\'aplicació Zenhabit</string>

    <!--  JARDÍ  -->
    <string name="avet">Avet</string>
    <string name="palmera">Palmera</string>
    <string name="olivera">Olivera</string>
    <string name="girasol">Girasol</string>
    <string name="rosa">Rosa</string>
    <string name="lavanda">Lavanda</string>
    <string name="aloe_vera">Aloe Vera</string>
    <string name="bambu">Bambú</string>
    <string name="cactus">Cactus</string>
    <string name="icona_avet">Icona d\'un Avet</string>
    <string name="icona_palmera">Icona d\'una Palmera</string>
    <string name="icona_olivera">Icona d\'una Olivera</string>
    <string name="icona_girasol">Icona d\'un Girasol</string>
    <string name="icona_rosa">Icona d\'una Rosa</string>
    <string name="icona_lavanda">Icona d\'una planta de Lavanda</string>
    <string name="icona_aloe_vera">Icona d\'una planta d\'Aloe Vera</string>
    <string name="icona_bambu">Icona d\'una planta de Bambú</string>
    <string name="icona_cactus">Icona d\'un Cactus</string>
    <string name="descripcio_palmera">La seva longitud t\'ajudarà a arribar molt abans a tots els teus objectius.</string>
    <string name="descripcio_aloe">Les seves propietats curatives t\'ajudaran a no defallir.</string>
    <string name="descripcio_avet">La seva fortalesa farà que construeixis objectius \"robustos\".</string>
    <string name="descripcio_olivera">La seva sabiduria t\'ajudarà a prendre millors decisions per complir els teus objectius.</string>
    <string name="descripcio_girasol">La seva energia et farà imparable!</string>
    <string name="descripcio_rosa">La seva bellesa et donarà optimisme per encarar els nous reptes.</string>
    <string name="descripcio_lavanda">La seva fragància t\'ajudarà a aclarir la ment per prendre millors decisions.</string>
    <string name="descripcio_bambu">La seva flexibilitat t\'ajudarà a trobar nous enfocs als teus problemes.</string>
    <string name="descripcio_cactus">Les seves espines t\'ajudaran a mantenir allunyats els mals hàbits!</string>

    <!-- HÀBITS / TASQUES -->
    <string name="nom_de_la_tasca">Nom tasca</string>
    <string name="hora">hora</string>
    <string name="icona_repeticio">icona de repetició</string>
    <string name="icona_rellotge">icona d\'un rellotge</string>
    <string name="nom_de_habit">Nom de l\'hàbit</string>
    <string name="dilluns">Dilluns</string>
    <string name="dimarts">Dimarts</string>
    <string name="dimecres">Dimecres</string>
    <string name="dijous">Dijous</string>
    <string name="divendres">Divendres</string>
    <string name="dissabte">Dissabte</string>
    <string name="diumenge">Diumenge</string>
    <string name="hora_limit">Hora</string>
    <string name="_hora0000">00:00</string>
    <string name="data000000">00/00/00</string>

    <!--  TASQUES  -->
    <string name="boton">+</string>
    <string name="objdiari">ObjDiari</string>
    <string name="descobdiari">DescObDiari</string>
    <string name="aconseguides">Aconseguides</string>
    <string name="reptes_diaris">Reptes diaris</string>
    <string name="tasques">Objectius</string>
    <string name="nom_tasca">Nom Tasca</string>
    <string name="nom_habit">Nom Hàbit</string>
    <string name="data_limit_hint">00/00/00</string>
    <string name="no_data_available">No tens objectius pendents.</string>
    <string name="label_finalitzacio_objectiu">Finalitza:</string>
    <string name="formulari_nom_objectiu">El nom no pot superar els 25 caràcters.</string>
    <string name="formulari_nom_objectiu2">Un nom és necessari.</string>
    <string name="formulari_categoria">S\'ha de seleccionar una categoria.</string>
    <string name="formulari_date">La data ha de ser posterior a avui.</string>

    <!-- PANTALLA CONFIGURACIONS -->
    <string name="settings_title">Configuracions</string>
    <string name="configuracions_titol_perfil">Perfil per </string>
    <string name="configuracions_crear_contrasenya">Crear contrasenya</string>
    <string name="configs_canviar_contrasenya">Canviar contrasenya</string>
    <string name="configs_canviar_nom_usuari">Canviar nom</string>
    <string name="configs_canviar_correu">Canviar correu electrònic</string>
    <string name="configuracions_titol_idioma_aplicacio">Idioma de l\'aplicació</string>
    <string name="configuracions_idioma_catala">Català</string>
    <string name="configuracions_idioma_castellano">Castellano</string>
    <string name="configuracions_idioma_english">English</string>
    <string name="icona_sobre_de_correu">icona sobre de correu</string>
    <string name="icona_usuari">icona usuari</string>
    <string name="icona_en_forma_de_candau">icona en forma de candau</string>
    <string name="hint_nomUsuari">Nou nom d\'usuari/a</string>
    <string name="hint_correu">Nou correu electrònic</string>
    <string name="hint_contrasenya">Contrasenya actual</string>
    <string name="hint_novaContresenya">Nova contrasenya</string>


    <string name="contrasenya">Contrasenya</string>
    <string name="inicia_sessi_per_continuar">Inicia sessió per continuar</string>
    <string name="email">Correu electrònic</string>
    <string name="no_tens_compte_registrar_se">No tens compte? <a href="#">Registrar-se</a></string>
    <string name="oblidat_contrasenya">Has oblidat la teva contrasenya? <a href="#">Restableix-la</a></string>
    <string name="completa_el_teu_perfil">Completa el teu perfil</string>
    <string name="termes_i_condicions">Accepto els <a href="#">Termes i Condicions del servei</a> i la <a href="#">Política de Privacitat</a>.</string>
    <string name="crear_contrasenya">Crear contrasenya</string>
    <string name="descripcio_opcional">Descripció (opcional)</string>
    <string name="tasca_txt_btn">Tasca</string>
    <string name="habit_txt_btn">Hàbit</string>
    <string name="repeticio">Repetició</string>
    <string name="horari">Horari</string>
    <string name="data_limit">Data límit</string>

    <!-- DIÀLEG 'ABOUT' -->
    <string name="about_versio">(Versió 1.0)</string>
    <string name="txell_llanas">Txell Llanas</string>
    <string name="izan_jimenez">Izan Jiménez</string>
    <string name="victor_garcia">Víctor García</string>
    <string name="about_credits">Desenvolupat per:</string>
    <string name="pablo_morante">Pablo Morante</string>
    <string name="copyright">&#169; 2022 ZenHabit</string>
    <string name="logout">Sortir</string>
    <string name="logotip_zenhabit">Logotip ZenHabit</string>
    <string name="zenhabit_logo_descripcio">ZenHabit logo</string>
    <string name="credits">&#160;Crèdits</string>

    <!-- HOME TASQUES PENDENTS -->
    <string name="tasques_pendents">Tens &#8230;</string>
    <string name="pendents_primera">Tens</string>
    <string name="pendents_segona_singular">objectiu pendent.</string>
    <string name="pendents_segona_plural">objectius pendents.</string>
    <string name="icona_campana">icona campana</string>
    <string name="pendents">Pendents</string>
    <string name="seguiment">Seguiment</string>
    <string name="complerts">Complerts</string>

    <!-- TITOLS ACTIONBAR -->
    <string name="create_habit">Crear hàbit</string>
    <string name="edit_habit">Editar hàbit</string>
    <string name="create_task">Crear tasca</string>
    <string name="edit_task">Editar tasca</string>
    <string name="config_title">Configuració</string>
    <string name="tasks_title">Tasques</string>
    <string name="garden_title">Jardí</string>

    <!-- TOASTS / ERRORS -->
    <string name="mandatory_camp">Camp obligatori.</string>
    <string name="signIn_fail">Email o contrasenya incorrectes.</string>
    <string name="send_email">Email per restaurar contrasenya enviat.</string>
    <string name="error_send_email">L\'email introduit no té associat un compte d\'usuari.</string>
    <string name="user_created">Usuari creat correctament.</string>
    <string name="error_user_created">L\'autentificació ha fallat.</string>
    <string name="error_email_created">El format d\'email és incorrecte.</string>
    <string name="error_password_created">La contrasenya com a mínim ha de tenir 8 caràcters, una majúscula i un número.</string>
    <string name="error_username_created">El nom d\'usuari ha de ser d\'entre 3 i 15 caràcters.</string>
    <string name="toast_change_password">Contrasenya canviada correctament.</string>
    <string name="toast_change_email">Email canviat correctament.</string>
    <string name="toast_habit_creat">Hàbit creat correctament!</string>
    <string name="toast_habit_update">Hàbit actualitzat correctament!</string>
    <string name="toast_tasca_creada">Tasca creada correctament!</string>
    <string name="toast_tasca_update">Tasca actualitzada correctament!</string>
    <string name="toast_objectiu_completat">Felicitats! Has aconseguit 1</string>
    <string name="toast_accept_terms">Cal acceptar els Termes i Condicions.</string>
    <string name="toast_change_name">Nom d\'usuari canviat correctament.</string>
    <string name="toast_formulari_habit">S\'ha de seleccionar mínim 1 dia de repetició.</string>

    <!-- NOTIFICACIONS -->
    <string name="label_notificacio_jardi">Encara tens tasques per fer!</string>
    <string name="label_notificacio_getNewItem_singular">tasca o hàbit pendent.</string>
    <string name="label_notificacio_getNewItem_plural">tasques o hàbits pendents.</string>
    <string name="pendents_tercera_singular">Hàbit pendent.</string>
    <string name="pendents_tercera_plural">Hàbits pendents.</string>
    <string name="jardi_cap_item_aconseguit" translatable="false">0</string>
    <string name="title_review">Valora\'ns!</string>
    <string name="description_review">La teva opinió és important. Explica\'ns què en penses de Zenhabit.</string>
    <string name="closing_review">Gràcies!</string>
    <string name="btn_cancel_review">Ara no</string>
    <string name="btn_accept_review">Valorar</string>

</resources>
